[package]
authors = ["Km Mahbubuzzaman <kmmahbub@proton.me>"]
edition = "2021"
name    = "hello-lib"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = { version = "2", features = ["tokio_rt"] }
napi-derive = "2"
reqwest     = { version = "0.12", features = ["native-tls-vendored"] }
tokio       = { version = "1", features = ["full"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
